Got Seller and Album route working

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "type": "git",
     "url": "git+https://github.com/bababa100/Project-2.git"
   },
-  "author": "",
+  "author": "David Lane",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/bababa100/Project-2/issues"
